@@ -10,6 +10,7 @@
 ------------
 This is a changelog for FrontAccounting All releases.
 
+2014-09-25 Joe                Global option for printing item images on sales quotations.
 2014-09-24 Joe                Improved Tax Report. Bank Payments/Deposits show 'order to/name' info in name column.
 2014-09-23 Janusz Dobrowolski Small cleanups.
 2014-09-21 Janusz Dobrowolski Fixed stock quantity checks to block transactions which would result in negative inventory status (if not allowed).
